# validator

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  STABILITY.md  package-lock.json  package.json  rules-manifest.json
.github/workflows/: ci.yml  release.yml
cli/: README.md  package.json
cli/src/: cli.ts
cli/tools/: build.mjs  sync-license.mjs
corpus/: cases.json
crates/validator/: Cargo.toml  build.rs
crates/validator/examples/: validate.rs
crates/validator/src/: engine.rs  lib.rs  manifest.rs  pipeline.rs  rules.rs  structural.rs  types.rs  wasm.rs
crates/validator/src/_vendored/manifest/: rules-manifest.json
crates/validator/src/_vendored/schemas/: collection.json
crates/validator/tests/: corpus.rs  curated_equiv_vendored.rs  vendored_parity.rs
plans/: 1.0.0-cut.md
schemas/curated/: collection.json  core.json  dataset.json  dimension.json  index.json
schemas/curated/bundled/: collection.json  dataset.json  dimension.json  index.json
tools/: bundle-schemas.mjs  prepare.mjs
