[package]
name = "jsonstat-validator"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Semantic validator for JSON-stat 2.0 — cross-field cube invariants on top of the official JSON Schema 2020-12 definitions."
repository = "https://github.com/jsonstat/validator"

[lib]
name = "jsonstat_validator"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features = false: the schemas are fully self-contained (no external $ref), so we don't
# need jsonschema's HTTP/file retrievers (which are not wasm-compatible).
jsonschema = { version = "0.22", default-features = false }

[features]
default = []
# Legacy no-op feature, kept for backwards compatibility with the documented command
# `cargo build --features wasm --target wasm32-unknown-unknown`. The WebAssembly surface
# (src/wasm.rs) is now compiled automatically whenever the target arch is wasm32, so
# `wasm-pack build` works without passing a feature (wasm-pack has no --features flag).
wasm = []

# WebAssembly surface dependencies, pulled automatically on wasm32 builds so src/wasm.rs compiles.
# On wasm32, getrandom needs the wasm_js backend cfg: build with
# RUSTFLAGS='--cfg getrandom_backend="wasm_js"' (see packages/wasm/tools/build.mjs).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
# Prints Rust panic messages (with location) to the JS console instead of trapping on an opaque
# `unreachable`. Installed once at the top of validate_json().
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
